# web-scraper

./: pyproject.toml  scraper.ipynb  scraper.py  scraper_function.ipynb
test/: test_scraper.py
web_scraper/: scraper.py
